@@ -138,6 +138,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4473: Add a POP3.stls() to switch a clear-text POP3 session into
+  an encrypted POP3 session, on supported servers.  Patch by Lorenzo Catucci.
+
 - Issue #4473: Add a POP3.capa() method to query the capabilities advertised
   by the POP3 server.  Patch by Lorenzo Catucci.
 
